fix soon alignment

--- a/css/style.css
+++ b/css/style.css
@@ -232,7 +232,7 @@ header .carousel-indicators li {
 .purchase button.soon-app-store{
 	width: 152px;
 	height: 52px;
-	background: url(../img/soon-appstore.png) #3a3a3a no-repeat 0px 5px;
+	background: url(../img/soon-appstore.png) #3a3a3a no-repeat 6px 5px;
 	color: white;
 }
 
@@ -254,7 +254,7 @@ only screen and (                min-resolution: 2dppx) {
 	.purchase button.soon-app-store{
 	width: 152px;
 	height: 52px;
-	background: url(../img/soon-appstore@2x.png) #3a3a3a no-repeat 0px 5px;
+	background: url(../img/soon-appstore@2x.png) #3a3a3a no-repeat 6px 5px;
 	color: white;
 	background-size: 135px 40px;
 	}
